Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex voluptas, perferendis quidem quam quibusdam consequatur iure non nam, temporibus fuga voluptatum necessitatibus atque, dolorum ab! Sunt mollitia porro laboriosam facere.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex voluptas, perferendis quidem quam quibusdam consequatur iure non nam, temporibus fuga voluptatum necessitatibus atque, dolorum ab! Sunt mollitia porro laboriosam facere.</p><br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quas tenetur possimus esse ex! Itaque tempora quia error quo exercitationem, aperiam doloremque minima iure ullam amet neque laboriosam est dicta.</p>
 </body>
 </html>
